--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.4.6'
 }
 
 group 'org.example'
@@ -15,6 +16,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.0'
 }
 
 application {
